<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_capabilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_get_capabilities" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_get_capabilities"
        android:text="@string/label_authorize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_authorize"
        android:text="@string/label_sign_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reauthorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        android:text="@string/label_reauthorize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_deauthorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_reauthorize"
        android:text="@string/label_deauthorize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_request_airdrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_deauthorize"
        android:text="@string/label_request_airdrop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_offchain_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_request_airdrop"
        android:text="@string/label_sign_offchain_message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_txn_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_offchain_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner_txn_ver"
        android:text="@string/label_txn_version" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_txn_ver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/label_txn_ver"
        app:layout_constraintBottom_toBottomOf="@id/label_txn_ver"
        app:layout_constraintStart_toEndOf="@id/label_txn_ver"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_txn_x1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_txn_ver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_txn_x3"
        android:text="@string/label_sign_txn_x1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_txn_x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_sign_txn_x1"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_txn_x1"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_txn_x20"
        android:text="@string/label_sign_txn_x3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_txn_x20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_sign_txn_x1"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_txn_x1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_sign_txn_x20" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorize_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_txn_x1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_authorize_sign_msg_txn"
        android:text="@string/label_authorize_sign_txn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorize_sign_msg_txn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_authorize_sign"
        app:layout_constraintBottom_toBottomOf="@id/btn_authorize_sign"
        app:layout_constraintStart_toEndOf="@id/btn_authorize_sign"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_authorize_sign_msg_txn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_msg_x1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_authorize_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_msg_x3"
        android:text="@string/label_sign_msg_x1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_msg_x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_sign_msg_x1"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_msg_x1"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_msg_x20"
        android:text="@string/label_sign_msg_x3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_msg_x20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_sign_msg_x1"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_msg_x1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_sign_msg_x20" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_and_send_txn_x1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_msg_x1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_and_send_txn_x3"
        android:text="@string/label_sign_and_send_txn_x1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_and_send_txn_x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_sign_and_send_txn_x1"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_and_send_txn_x1"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_and_send_txn_x20"
        android:text="@string/label_sign_and_send_txn_x3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_and_send_txn_x20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_sign_and_send_txn_x1"
        app:layout_constraintBottom_toBottomOf="@id/btn_sign_and_send_txn_x1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_sign_and_send_txn_x20" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_has_auth_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_and_send_txn_x1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_has_auth_token"
        android:textAppearance="?textAppearanceBody1"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_has_auth_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/label_has_auth_token"
        app:layout_constraintBottom_toBottomOf="@id/label_has_auth_token"
        app:layout_constraintStart_toEndOf="@id/label_has_auth_token"
        android:enabled="false" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_accounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/spinner_accounts"
        app:layout_constraintBottom_toBottomOf="@id/spinner_accounts"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_accounts"
        android:textAppearance="?textAppearanceBody1"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_accounts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_has_auth_token"
        app:layout_constraintStart_toEndOf="@id/label_accounts"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_wallet_uri_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_wallet_uri_prefix"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wallet_uri_prefix"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_wallet_uri_prefix"
        android:textAppearance="?textAppearanceBody1"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_wallet_uri_prefix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_accounts"
        app:layout_constraintStart_toEndOf="@id/label_wallet_uri_prefix"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="?textAppearanceBody1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_session_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_session_version"
        app:layout_constraintBottom_toBottomOf="@+id/tv_session_version"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_session_version"
        android:textAppearance="?textAppearanceBody1"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_session_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_wallet_uri_prefix"
        app:layout_constraintStart_toEndOf="@id/label_wallet_uri_prefix"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="?textAppearanceBody1" />

</androidx.constraintlayout.widget.ConstraintLayout>